fixed spacing

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
 }
 
 h2 {
-	margin-left: 670px;
+	margin-left: 645px;
 	height: 0px;
 }
 
@@ -47,7 +47,7 @@ div {
 
 #bullets {
 	margin-top: -50px;
-	margin-left: -230px;
+	margin-left: -280px;
 	width: 850px;
 	font-size: 1.35em;
 }
@@ -55,7 +55,7 @@ div {
 #lonely {
 	font-size: 1.15em;
 	margin-top: 280px;
-	margin-left: 200px;
+	margin-left: 175px;
 }
 
 p {
